cluster/addons/longhorn/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    gethomepage.dev/description: Distributed storage that isn't Ceph
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: longhorn.internal
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.internal
      secretName: homelab-tls
